# blackjackOnC

./: .gitignore  CMakeLists.txt  README.md  makefile
dependencies/: terasic_lib.c
include/: game_logic.h
include/peripherals/: lcd.h
includes/: game_logic.h  input.h
includes/peripherals/: lcd.h
src/: .game_logic.c.swp  .main.c.swp  game_logic  game_logic.c  main.c
src/game_logic.dSYM/Contents/: Info.plist
src/game_logic.dSYM/Contents/Resources/DWARF/: game_logic
src/game_logic.dSYM/Contents/Resources/Relocations/aarch64/: game_logic.yml
src/peripherals/: input.c  lcd.c
